<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_flying_fish"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="151dp"
        android:src="@drawable/manish" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="211dp"

        android:text="@string/manish_kumar_yadav"
        android:textColor="#ffffff"
        android:textSize="20sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"

        android:layout_marginBottom="151dp"
        android:text="@string/mobile_no_8423217878"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"

        android:layout_gravity="center"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginBottom="109dp"
        android:gravity="center"
        android:text="@string/nit_durgapur"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/startgamebutton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="38dp"
        android:text="@string/start_game"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>